FOS User Bundle and HWI Oauth Bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,6 +63,7 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
+        naming_strategy: doctrine.orm.naming_strategy.underscore
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -71,3 +72,24 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+hwi_oauth:
+    connect:
+        account_connector: my_user_provider
+    firewall_name: main
+    fosub:
+        username_iterations: 30
+        properties:
+            facebook: facebookId
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           "%facebook.client_id%"
+            client_secret:       "%facebook.client_secret%"
+            scope:               "email"
+
+
+fos_user:
+    db_driver: orm
+    firewall_name: secure_area
+    user_class: AppBundle\Entity\User
