--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,7 +87,10 @@ hwi_oauth:
             client_id:           "%facebook.client_id%"
             client_secret:       "%facebook.client_secret%"
             scope:               "email"
-
+            infos_url:           "https://graph.facebook.com/me?fields=id,name,email,picture.type(square)"
+            paths:
+                email:          email
+                profilepicture: picture.data.url
 
 fos_user:
     db_driver: orm
