--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,6 +5,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_USER
+        ROLE_COMPLETE_USER: ROLE_USER
  
     providers:
         fos_userbundle:
@@ -50,3 +51,4 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/user/, role: ROLE_USER }
