--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,6 +13,7 @@ parameters:
     mailer_host:       127.0.0.1
     mailer_user:       ~
     mailer_password:   ~
+    delivery_address:  info@example.com
 
     locale:            en
 
