--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,6 +32,8 @@ twig:
     form:
         resources: ['bootstrap_3_layout.html.twig']
         # resources: ['bootstrap_3_horizontal_layout.html.twig']
+    globals:
+        facebook_client_id: %facebook.client_id%
 
 # Assetic Configuration
 assetic:
