--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,3 +82,6 @@ fos_user:
     db_driver: orm
     firewall_name: secure_area
     user_class: AppBundle\Entity\User
+    registration:
+        form:
+            type: app_user_registration
