--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,6 +23,7 @@ security:
                 csrf_provider: form.csrf_provider
                 login_path: /login
                 check_path: /login_check
+                success_handler: success_handler
             logout:       true
             anonymous:    true
  
