--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,3 +16,8 @@ services:
         class: AppBundle\Form\RegistrationType
         tags:
             - { name: form.type, alias: app_user_registration }
+
+    success_handler:
+        class: AppBundle\Security\SuccessHandler
+        arguments:
+            - @router
