--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,7 +15,7 @@ parameters:
     mailer_password:   ~
     delivery_address:  info@example.com
 
-    locale:            en
+    locale:            sv
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
