--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ php:
   - 5.5
   - 5.6
 
+sudo: false
+
 before_script:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - composer install
