--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: php
+
 php:
   - 5.5
   - 5.6
@@ -6,7 +8,8 @@ sudo: false
 
 before_script:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - composer install
+  - composer self-update
+  - composer install --dev --no-interaction --prefer-source
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
@@ -16,4 +19,4 @@ script:
 
 notifications:
   email:
-    - jon@jon.se
+    - "jon@jon.se"
