--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
+  - 7
 
 sudo: false
+
+matrix:
+  allow-failures:
+    - php: 7
 
 before_script:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
