Implemented welcome email message and fixed wantToLearn value

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -42,3 +42,10 @@ services:
             - [ setDefaultLocale, [ %locale% ] ]
             - [ setTranslationFallback, [ true ] ]
 
+    app.user_mailer:
+        class: AppBundle\Mailer\UserMailer
+        arguments:
+            - @mailer
+            - @router
+            - @templating
+            - @translator
