--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -49,3 +49,8 @@ services:
             - @router
             - @templating
             - @translator
+
+    app.form.boolean_choice:
+        class: AppBundle\Form\ChoiceTypeBoolean
+        tags:
+            - { name: form.type, alias: boolean_choice }
