Validate user has music categories if creating music friend connection request

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -44,3 +44,8 @@ services:
         class: AppBundle\Form\ChoiceTypeBoolean
         tags:
             - { name: form.type, alias: boolean_choice }
+
+    validator.user_has_music_categories:
+        class: AppBundle\Validator\Constraints\UserHasMusicCategoriesValidator
+        tags:
+            - { name: validator.constraint_validator, alias: user_has_music_categories }
