--- a/app/config/repositories.yml
+++ b/app/config/repositories.yml
@@ -33,3 +33,10 @@ services:
         factory_method: getRepository
         arguments:
             - AppBundle:City
+
+    pre_match_repository:
+        class: AppBundle\Entity\PreMatchRepository
+        factory_service: doctrine.orm.default_entity_manager
+        factory_method: getRepository
+        arguments:
+            - AppBundle:PreMatch
