--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,8 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    serializer:
+        enabled: true
 
 # Twig Configuration
 twig:
