--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -55,3 +55,15 @@ services:
         public: false
         tags:
             - { name: security.voter }
+
+    normalizer.pre_match:
+        class: AppBundle\Serializer\Normalizer\PreMatchNormalizer
+        tags:
+            - { name: serializer.normalizer }
+
+    manager.pre_match:
+        class: AppBundle\Manager\PreMatchManager
+        arguments:
+            - "@connection_request_repository"
+            - "@user_repository"
+            - "@doctrine.orm.entity_manager"
