--- a/app/config/repositories.yml
+++ b/app/config/repositories.yml
@@ -40,3 +40,10 @@ services:
         factory_method: getRepository
         arguments:
             - AppBundle:PreMatch
+
+    municipality_repository:
+        class: AppBundle\Entity\MunicipalityRepository
+        factory_service: doctrine.orm.default_entity_manager
+        factory_method: getRepository
+        arguments:
+            - AppBundle:Municipality
