Startfriend and new logo :tada:

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -55,6 +55,12 @@ musicfriend:
         _controller: FrameworkBundle:Template:template
         template:    static/musicfriend.html.twig
 
+startfriend:
+    path: /startkompis
+    defaults:
+        _controller: FrameworkBundle:Template:template
+        template:    static/start.html.twig
+
 fos_user_profile_show:
     path: /
 
