--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "white-october/pagerfanta-bundle": "^1.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpunit/phpunit": "^5.6"
     },
     "scripts": {
         "post-root-package-install": [
