--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - php app/console doctrine:fixtures:load -n --env=test
 
 script:
-  - vendor/bin/phpunit -c app
+  - vendor/phpunit/phpunit/phpunit -c app
 
 notifications:
   email:
