--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "dizda/cloud-backup-bundle": "~3.2",
         "jongotlin/deadmanssnitch-bundle": "^1.0",
         "aws/aws-sdk-php": "~2.7",
-        "knplabs/knp-gaufrette-bundle": "^0.4.0"
+        "knplabs/knp-gaufrette-bundle": "^0.4.0",
+        "jongotlin/identity-number-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
