--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
     "require": {
-        "php": "^7.0",
+        "php": "7.0.* || 7.1.*",
         "symfony/symfony": "~2.7",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
