--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -56,6 +56,7 @@ services:
             - @templating
             - @translator
             - @event_dispatcher
+            - '%days_to_accept_keep_inactive_user_before_deletion%'
 
     app.mailer:
         class: AppBundle\Mailer\Mailer
