--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,7 +20,7 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_provider: form.csrf_provider
+                #csrf_token_generator: form.csrf_provider
                 login_path: /login
                 check_path: /login_check
                 success_handler: success_handler
@@ -30,12 +30,6 @@ security:
         login:
             pattern:  ^/login$
             security: false
- 
-            remember_me:
-                key: "%secret%"
-                lifetime: 31536000 # 365 days in seconds
-                path: /
-                domain: ~ # Defaults to the current domain from $_SERVER
  
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
